2007-04-02 10:02 -0700  Brendan Cully  <brendan@kublai.com>  (becbad651ecc)

	* imap/imap.c: Cache IMAP access checks

2007-04-01 23:12 -0700  Brendan Cully  <brendan@kublai.com>  (4f598543d7a5)

	* imap/imap.c, imap/message.c: Adjust context->size on IMAP load
	and expunge (closes #2749)

2007-04-01 20:00 -0700  Ambrose Li  <a.c.li@ieee.org>  (38e896c4c192)

	* po/zh_TW.po: Updated Taiwanese translation

2007-04-01 15:40 -0700  TAKAHASHI Tamotsu  <ttakah@lapis.plala.or.jp>  (6dcb53bc679c)

	* crypt-gpgme.c: gpgme: check result for signatures pointer
	(closes: #2199)

2007-04-01 15:33 -0700  Brendan Cully  <brendan@kublai.com>  (3a81b3793f77)

	* doc/muttbug.man: Update flea man page to current addresses

	* muttbug.sh.in: Adjust flea to use new submission address; check
	email for @

	* doc/muttbug.man, muttbug.sh.in: Restore muttbug

2007-03-31 18:50 -0700  Brendan Cully  <brendan@kublai.com>  (f467353f5657)

	* bcache.c, bcache.h, imap/message.c, pop.c, pop.h: Add tmp flag
	to bcache_put, create bcache_commit.

	* imap/command.c, imap/imap.c: Allow IMAP FCC to reconnect if
	append fails (closes: #890)

	* mh.c: Always set up data pointer in mh_read_dir, not just when
	allocating context

2007-03-30 21:26 -0700  Daniel Burrows  <dburrows@debian.org>  (d5ab883ef90a)

	* hcache.c: Fix handling of DB4 hcache open failure. (closes: #2714)

2007-03-30 20:18 -0700  Brendan Cully  <brendan@kublai.com>  (dc54ae48d8c1)

	* mh.c: Set mode of new mh/maildir messages to match parent
	directory.

	* mh.c, mutt.h: Move mtime_cur from CONTEXT to mh_data

	* imap/imap.c, imap/imap.h, mh.c: Add close hook for
	mh/maildir. stat the directory on open. Make IMAP close function
	match prototype.

	* imap/imap.c, mutt.h, mx.c, pop.c: Add function pointer for close
	hook in Context. Slowly inch towards function pointers instead of
	switch statements.

	* imap/command.c, imap/imap.c: Use RECENT for first mailbox
	check if header cache check fails
